# SkywalkerGameServer

./: .cursorrules  .gitignore  AGENTS.md  CMakeLists.txt  FAQ.md  JobRecord.md  PLAN.md  README.md  SkywalkerGameServer.code-workspace  框架插件与模块缺口清单及落地步骤.md  网络通信架构方案.md
SkywalkerFramework/: AGENTS.md  CMakeLists.txt  README.md  SkywalkerFramework.cpp  SkywalkerFramework.h  SkywalkerFramework.plantuml
SkywalkerFramework/Core/: AGENTS.md  CMakeLists.txt
SkywalkerFramework/Core/DynamicLib/: SFDynamicLib.cpp  SFDynamicLib.h  SSFDynamicLib.cpp  SSFDynamicLib.h
SkywalkerFramework/Core/Module/: SFModule.cpp  SFModule.h  SSFModule.cpp  SSFModule.h
SkywalkerFramework/Core/Object/: SFArchive.h  SFJsonArchive.h  SFMemoryArchive.h  SFObject.h  SFObjectManager.h  SSFObject.h  SSFObjectManager.h
SkywalkerFramework/Core/Plugin/: SFPlugin.cpp  SFPlugin.h  SFPluginManager.cpp  SFPluginManager.h  SSFPlugin.cpp  SSFPlugin.h  SSFPluginManager.cpp  SSFPluginManager.h
SkywalkerFramework/Core/Service/: SFGameplayServiceGateway.cpp  SFGameplayServiceGateway.h  SFService.cpp  SFService.h  SFServiceManager.h  SSFGameplayServiceGateway.cpp  SSFGameplayServiceGateway.h  SSFService.cpp  SSFService.h  SSFServiceManager.h
SkywalkerFramework/Include/: SFActorTypes.h  SFCore.h  SFErrors.h  SFEvent.h  SFFramework.h  SFILog.h  SFNetworkInterface.h  SFPlatform.h  SFramework.h  SSFCore.h  SSFErrors.h  SSFEvent.h  SSFILog.h  SSFPlatform.h  SSFramework.h
SkywalkerFramework/Plugin/: AGENTS.md  CMakeLists.txt
SkywalkerFramework/Plugin/AI/: CMakeLists.txt  README.md  SFPlugin_AI.cpp  SFPlugin_AI.h  SSFPlugin_AI.cpp  SSFPlugin_AI.h
SkywalkerFramework/Plugin/Actor/: CMakeLists.txt  README.md  SFPlugin_Actor.cpp  SFPlugin_Actor.h  SSFPlugin_Actor.cpp  SSFPlugin_Actor.h
SkywalkerFramework/Plugin/Auth/: CMakeLists.txt  README.md  SFPlugin_Auth.cpp  SFPlugin_Auth.h  SSFPlugin_Auth.cpp  SSFPlugin_Auth.h
SkywalkerFramework/Plugin/CommandLine/: CMakeLists.txt  README.md  SFPlugin_CommandLine.cpp  SFPlugin_CommandLine.h  SSFPlugin_CommandLine.cpp  SSFPlugin_CommandLine.h
SkywalkerFramework/Plugin/DB/: CMakeLists.txt  README.md  SFPlugin_DB.cpp  SFPlugin_DB.h  SSFPlugin_DB.cpp  SSFPlugin_DB.h
SkywalkerFramework/Plugin/Game/: CMakeLists.txt  SFPlugin_Game.cpp  SFPlugin_Game.h
SkywalkerFramework/Plugin/Level/: CMakeLists.txt  README.md  SFPlugin_Level.cpp  SFPlugin_Level.h  SSFPlugin_Level.cpp  SSFPlugin_Level.h
SkywalkerFramework/Plugin/Network/: CMakeLists.txt  README.md  SFPlugin_Network.cpp  SFPlugin_Network.h  SSFPlugin_Network.cpp  SSFPlugin_Network.h
SkywalkerFramework/Plugin/Profiler/: CMakeLists.txt  README.md  SFPlugin_Profiler.cpp  SFPlugin_Profiler.h  SSFPlugin_Profiler.cpp  SSFPlugin_Profiler.h
SkywalkerFramework/Plugin/Test/: CMakeLists.txt  README.md  SFPlugin_Test.cpp  SFPlugin_Test.h  SFTestExample.h  SSFPlugin_Test.cpp  SSFPlugin_Test.h  SSFTestExample.h
SkywalkerFramework/Plugin/Video/: CMakeLists.txt  README.md  SFPlugin_Video.cpp  SFPlugin_Video.h  SSFPlugin_Video.cpp  SSFPlugin_Video.h
SkywalkerGameClient/: CMakeLists.txt  README.md  SkywalkerGameClient.cpp
SkywalkerGameClient/Executable/: CMakeLists.txt
SkywalkerGameServer/: CMakeLists.txt  README.md  SkywalkerGameServer.cpp  SkywalkerNetworkTest.cpp  SkywalkerTestMain.cpp
SkywalkerGameServer/Executable/: CMakeLists.txt  SkywalkerGameServer.cpp  main.cpp
SkywalkerGameServer/Include/: Errors.h  SGSErrors.h  SGSILauncher.h  SGSModuleExporter.h
SkywalkerGameServer/Module/Launcher/: CMakeLists.txt  Launcher.h  SGSLauncher.cpp  SGSLauncher.h
SkywalkerScript/: CMakeLists.txt  README.md  SkywalkerScript.cpp
SkywalkerScript/Include/: SkywalkerScriptParse.h
SkywalkerServerEditor/: CMakeLists.txt  README.md  SkywalkerServerEditor.cpp
SkywalkerServerEditor/Editor/: CMakeLists.txt
SkywalkerServerFramework/: CMakeLists.txt  README.md  SkywalkerServerFramework.cpp  SkywalkerServerFramework.h  SkywalkerServerFramework.plantuml
SkywalkerServerFramework/Core/: CMakeLists.txt  SSFModule.cpp  SSFModule.h  SSFObject.cpp  SSFObject.h  SSFPlugin.cpp  SSFPlugin.h  SSFPluginManager.cpp  SSFPluginManager.h  SkywalkerServerFramework.cpp
SkywalkerServerFramework/Core/Command/: SSFCommandLine.cpp  SSFCommandLine.h  SSFOSSignal.cpp  SSFOSSignal.h  SSFSystemSignal.cpp  SSFSystemSignal.h
SkywalkerServerFramework/Core/DynamicLib/: SSFDynamicLib.cpp  SSFDynamicLib.h
SkywalkerServerFramework/Core/Event/: README.md  SSFEvent.cpp  SSFEvent.h  SSFEventManager.cpp  SSFEventManager.h  SSFEventSkin.cpp  SSFEventSkin.h  SSFObject_Event.cpp  SSFObject_Event.h
SkywalkerServerFramework/Core/Loader/: SSFLoader.cpp  SSFLoader.h
SkywalkerServerFramework/Core/Map/: SSFMap.h
SkywalkerServerFramework/Core/Module/: CMakeLists.txt  SSFModule.cpp  SSFModule.h  SSFModuleManager.cpp  SSFModuleManager.h
SkywalkerServerFramework/Core/Object/: CMakeLists.txt  SSFObject.cpp  SSFObject.h  SSFObjectManager.h  SSFObjectPool.cpp  SSFObjectPool.h  SSFObjectSimple.cpp  SSFObjectSimple.h  SSFSingletonObject.cpp  SSFSingletonObject.h
SkywalkerServerFramework/Core/Plugin/: CMakeLists.txt  SSFPlugin.cpp  SSFPlugin.h  SSFPluginManager.cpp  SSFPluginManager.h
SkywalkerServerFramework/Editor/: CMakeLists.txt
SkywalkerServerFramework/Include/: SSFCore.h  SSFCreator.h  SSFErrors.h  SSFEvent.h  SSFEventDefine.h  SSFILog.h  SSFIModule.h  SSFIObject.h  SSFIPlugin.h  SSFIPluginManager.h  SSFInterface.h  SSFKeyword.h  SSFPlatform.h  SSFPluginDefinition.h  SSFramework.h
SkywalkerServerFramework/Launcher/: SSFLauncher.cpp  SSFLauncher.h
SkywalkerServerFramework/Plugin/: CMakeLists.txt
SkywalkerServerFramework/Plugins/: CMakeLists.txt
SkywalkerTest/: CMakeLists.txt  SkywalkerNetworkTest.cpp  SkywalkerTestMain.cpp
skywalker-server-framework/: CMakeLists.txt
skywalker-server-framework/include/: SSFKeyword.h
skywalker-server-framework/plugins/: CMakeLists.txt
src/: CMakeLists.txt
src/executable/: CMakeLists.txt  main.cpp
src/include/: Errors.h  ILauncher.h  ModuleExporter.h
src/module/: CMakeLists.txt
src/module/launcher/: CMakeLists.txt  (+2 more)
(+283 files in other folders)
