# #########################################################################
# 文件: SkywalkerServerFramework\Plugin\CMakeLists.txt
# 作者: shyfan
# 日期: 2023/07/30 12:38:52
# 功能:
# #########################################################################

add_subdirectory(Test)

add_subdirectory(Level)

add_subdirectory(Network)

add_subdirectory(Profiler)

add_subdirectory(Video)
